fix: update netlify build command

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "public"
-  command = "hugo --gc --minify"
+  command = "hugo"
 
 [context.production.environment]
   HUGO_VERSION = "0.97.0"
@@ -8,4 +8,4 @@
   HUGO_ENABLEGITINFO = "true"
 
 [context.deploy-preview]
-  command = "hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL"
+  command = "hugo --buildFuture -b $DEPLOY_PRIME_URL"
