feat: add social inks

--- a/config.yaml
+++ b/config.yaml
@@ -10,11 +10,16 @@ googleAnalytics: "UA-111281648-1"
 #   themeColor = "theme-base-09"
 params:
   homeInfoParams:
-    Title: David's blog
-    Content: I write about tech, story, strategy, information & marketing. I also help companies find their voice.
+    Content: I write about tech, story, strategy, information & marketing. I also help companies [find their voice](https://davideberretta.com/). <br/><br> Get these posts via email [here](http://eepurl.com/cSDdRr)
 
-  socialIcons: # optional
-    - name: "instagram"
-      url: "https://instagram.com/daveeday"
-    - name: "linkedin"
-      url: "https://blog.davideberretta.com/icons/iconmonstr-linkedin-4.svg"
+  socialIcons:
+    - name: instagram
+      url: https://instagram.com/daveeday
+    - name: linkedin
+      url: https://linkedin.com/in/davideberretta
+    - name: twitter
+      url: https://twitter.com/daveeday
+    - name: email
+      url: mailto:david.e.berretta@gmail.com?subject=Hello
+    - name: phone
+      url: https://clarity.fm/davideb
