--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,8 +1,8 @@
 backend:
-  # name: git-gateway
-  name: github
-  repo: Surfacebv/davide-blog-v2 # Path to your Github repository
-  branch: main # Branch to update (master by default)
+  name: git-gateway
+  # name: github
+  # repo: Surfacebv/davide-blog-v2 # Path to your Github repository
+  # branch: main # Branch to update (master by default)
 
 publish_mode: editorial_workflow
 
